--- a/tex/tcc.tex
+++ b/tex/tcc.tex
@@ -285,7 +285,7 @@ Com pontos capturados a partir dos marcadores, é selecionada a área de interes
 
 IMAGEM DA ÁREA DO MEIO DA FOLHA
 
-Com a informação de quantas colunas existem na área quadriculada, adquirida do código de barras presente na folha, a próxima etapa executada pelo algoritmo é de verficiar, em cada um dos retângulos da área de interesse, se há dois tipos de marcações diferentes: uma representa um son que só tocará naquele momento e a outra representa a continuidade do som, permitindo que ela seja reproduzido durante o tempo desejado pelo usuário.
+Com a informação de quantas colunas existem na área quadriculada, adquirida do código de barras presente na folha, a próxima etapa executada pelo algoritmo é de verficiar, em cada um dos retângulos da área de interesse, se há dois tipos de marcações diferentes: uma representa um som que só tocará naquele momento e a outra representa a continuidade do som, permitindo que ela seja reproduzido durante o tempo desejado pelo usuário. Foram escolhidas duas marcações diferentes para o software identificar quando deve ocorrer cada uma das duas situações. O que identifica se a nota será ou não mantida, é haver ou não pixels marcados do meio da marcação original padrão até o final do quadrado identificado pelo programa.
 
 IMAGEM DA MARCAÇÃO SOZINHA E IMAGEM DA MARCAÇÃO CONTINUADA (LADO A LADO)
 
@@ -372,13 +372,41 @@ Graças à biblioteca OpenCv, essa manipulação é de rápida e fácil aplicaç
 Assuntos a serem abordados:
 - Descrever a MATEMÁTICA envolvida nessa transformação 
 
+\chapter{Como Utilizar o Software}
+\label{cha:fund-teor}
+
+Ao se iniciar o software é necessário passar três parâmetros iniciais na sua execução. O primeiro é o identificador da entrada de vídeo do usuário para a cena ser capturada com a câmetra correta caso haja mais de uma conectada.
+
+O segundo é a velocidade de notas por minuto reproduzidas pelo software. Devido à limitação de tamanho de apenas uma folha A4, seria inviável a separação da folha em um compasso indicado pelo usuário, que é uma forma de se dividir sons com base em batidas e pausas, podendo-se utilizar, com o compasso definido, a notação mais comum utilizada em músicas que é o bpm (batidas por minuto). Uma vez com essa limitação,foi escolhida a notação de notas por minuto a fim do usuário controlar a velocidade de reprodução de cada espaço de tempo do modelo da folha. Abaixo podemos ver o modelo dividido num compasso 4/4 com intervalos de semicolcheia, ou seja, intervalos com metade do tempo de cada intervalo originalmente.
+
+LAYOUT COM 8/4
+
+Podemos ver que, dependendo do que o usuário definisse, a espaço livre para as marcações do usuário seria mínio, prejudicando o funcionamento do software.
+
+O terceiro é a oitava que será reproduzida no software. A oitava, na teoria musical, representa uma nota com o dobro ou metade de sua frequência. É quando a nota será, apesar de ter uma frequência maior ou menor que a nota de referência, a mesma e se chama oitava devido ao fato de, na representação mais comum das notas (dó, ré, mi, fá, sol, lá, sí), ela seria a oitava nota, que seria a mesma da primeira porém com uma frequência dobrada, ou seja: dó (oitava x), ré, mí, fá, sol, lá, sí e dó (oitava x+1), onde o último só e a oitava nota em relação ao primeiro.
+
+Com esses paramêtros definidos, o software inicia-se e lista todas as saídas midi disponíveis no momento para o usuário escolher a que o software enviará as mensagens do protocolo. Os parâmetros iniciais informados pelo usuário ao iniciar o software são apenas para configuraão inicial do ambiente, porém, ao iniciar-se o software de maneira correta, são editáveis a partir do clique de teclas específicas informadas pelo programa.
+
+Após essas configurações iniciais, é preciso se cumprir, assim como outros softwares que utilizam conceitos de visão artificial, certas condições para o funcionamento correto do software projetado neste trabalho.
+Primeiramente precisa-se de condições de ambiente favoráveis à captura das imagens da câmera como iluminação da cena, principalmente de forma que a folha não fique muito escura ou com sombreados escuros, pois o filtro de branco utilizado na área de interesse pode identificar essas sombras como marcações, o prejudica no funcionamento do software. Outra condição é uma angulação da câmera de forma que se consiga visualizar os quatro marcadores ArUco e o código de barras presentes na folha. Marcações serão mostradas no vídeo quando os cinco elementos forem identificados de forma correta. Abaixo temos a imagem capturada pela câmera com as devidas marcações indicando que as instruções iniciais foram seguidas como o desejado:
+
+FOTO COM AS MARCAÇÕES DE QUE ESTÁ TUDO OK
+
+A partir desse ponto, pode-se utilizar a barra de espaço para o software tocar ou parar a sequência identificada na folha. Essa sequência pode ser livremente alterada pelo usuário diretamente na folha de papel e reproduzida novamente quando se desejar, bastando apenas que as condições já explicadas sejam sempre cumpridas antes de se informar ao software que ele deverá reproduzir a sequência da folha.
+
+As marcações devem ser feitas sempre o mais centralizadas possível no retângulo que indica o espaço de tempo da sequência, sendo possível representar sons que vão continuar soando ou que vão parar no próximo intervalo de tempo com duas marcações distintas já mostradas no capítulo que destrincha o algoritmo utilizado.
+
 - Descrever COMO o usuário deve usar o quadriculado para selecionar as
 notas a serem tocadas. A propósito, um pouquinho de teoria musical
 explicando um bê-a-bá do uso do modelo é bem vinda. :)))
 
+\chapter{Biblioteca RtMidi}
+
+
+TUDO ABAIXO SERÁ EXPLICADO NESTE ÚTIMO CAPÍTULO
 - Descrever o uso da classe RtMidi, porque foi escolhida e como se dá
 sua utilização.
-Para a utilização do protocolo MIDI e para a comunicação entre sintetizadores, foi escolhida a biblioteca RtMidi para a linguagem de programação C++. Toda a transmissão e criação das mensagens foi abstraída durante o desenvolvimento do projeto graças a funcionalidades da biblioteca.
+Para a utilização do protocolo MIDI e para a comunicação entre sintetizadores, foi escolhida a biblioteca RtMidi para a linguagem de programação C++. Toda a transmissão e criação das mensagens foi abstraída durante o desenvolvimento do projeto graças às funcionalidades da biblioteca.
 
 - Descrever o sintetizador usado nos experimentos (QSynth).
 
