--- a/tex/tcc.tex
+++ b/tex/tcc.tex
@@ -308,35 +308,49 @@ Esse protocolo consiste na troca de "mensagens MIDI" entre o software ou hardwar
 
 Essas mensagens baseam-se em um conjunto de um ou mais {\it bytes}, onde o primeiro {\it byte} se classifica como {\it STATUS byte}, o qual define o tipo da mensagem, e é geralmente seguido por outros {\it bytes} chamados {\it DATA bytes}, os quais dão as características desejadas para a mensagem.
 
-Existem diversos tipos de mensagens, mostradas na tabela (REFERENCIA TABELA) e de forma expandida na tabela (REFERENCIA TABELA), extraídas diretamente da {\it The MIDI Association} (www.midi.org), principal portal com informações do protocolo MIDI, porém, para o desenvolvimento do projeto descrito nesta tese de conclusão de curso, foram utilizadas bascicamente as mensagens chamadas {\it Note ON} e {\it Note OFF}, que especificam quando uma nota deve ser ativada e desativada, além de mensagens padrão de configuração disponibilizadas pela biblioteca rtmidi que foi escolhida a fim de facilitar a comunicação do software com sintetizadores livres.
+Existem diversos tipos de mensagens, mostradas na tabela (REFERENCIA TABELA) e de forma expandida na tabela (REFERENCIA TABELA), extraídas diretamente da {\it The MIDI Association} (www.midi.org), principal portal com informações do protocolo MIDI, porém, para o desenvolvimento do projeto descrito nesta tese de conclusão de curso, foram utilizadas bascicamente as mensagens chamadas {\it Note ON} e {\it Note OFF}, que especificam quando uma nota deve ser ativada e desativada. Outra mensagem utilizada é a mensagem de {\it Control Change}, enviada para o sintetizador apenas na inicialização do programa, a qual pode designar diversas ações diferentes para o sintetizador, porém, no software apresentado neste trabalho, ela é utilizada apenas para controle de volume.
 
 As mensagens de ativação e desativação do som são compostas por um conjunto de 3 {\it bytes} os quais são representados da seguinte forma:
-
 \begin{itemize}
   \item A mensagem {\it Note ON}:
   \begin{itemize}
-    \item {\it Status byte}: 1001 AAAA
-    \item {\it Data byte}: 0BBB BBBB
-    \item {\it Data byte}: 0CCC CCCC
+    \item {\it Status byte}: 1001 nnnn
+    \item {\it Data byte}: 0kkk kkkk
+    \item {\it Data byte}: 0vvv vvvv
   \end{itemize}
 \end{itemize}
 
-Onde AAAA representa o canal que está mensagem controlará, variando entre 16 canais distintos, BBBBBBB representa o {\it pitch} que será reproduzido e CCCCCCC representa a velocidade que a nota será reproduzida que, em notação musical, temos essas velocidades da seguinte maneira:
+Onde nnnn representa o canal que esta mensagem controlará, variando entre 16 canais distintos, kkkkkkk representa o {\it pitch} que será reproduzido e vvvvvvv representa a velocidade que a nota será reproduzida que, em notação musical, temos essas velocidades da seguinte maneira:
 
 IMAGEM DAS VELOCIDADES
 
 Essa velocidade de reprodução, dependendo do tipo de instrumento selecionado, também varia a dinâmica que o som é reproduzido como quando uma nota de um piano é pressionada de forma brusca ou mais suave.
-
 \begin{itemize}
   \item A mensagem {\it Note OFF}:
   \begin{itemize}
-    \item {\it Status byte}: 1000 AAAA
-    \item {\it Data byte}: 0BBB BBBB
-    \item {\it Data byte}: 0DDD DDDD
+    \item {\it Status byte}: 1000 nnnn
+    \item {\it Data byte}: 0kkk kkkk
+    \item {\it Data byte}: 0vvv vvvv
   \end{itemize}
 \end{itemize}
 
-Para as mensagens {\it Note OFF}, os {\it bits} AAAA e BBBBBBB representam o mesmo da mensagem de ativação da nota sendo diferente apenas no terceiro {\it byte}, o DDDDDDD, que representa a velocidade de {\it release} do som, ou seja, a suavização até ele ser desligado.
+Para as mensagens {\it Note OFF}, os {\it bits} nnnn e kkkkkkk representam o mesmo da mensagem de ativação da nota sendo diferente apenas no terceiro {\it byte}, o vvvvvvv, que representa a velocidade de {\it release} do som, ou seja, a suavização até ele ser desligado.
+
+A mensagem de alteração de valores dos controladores é representada da seguinte maneira:
+\begin{itemize}
+  \item A mensagem {\it Note OFF}:
+  \begin{itemize}
+    \item {\it Status byte}: 1000 nnnn
+    \item {\it Data byte}: 0ccc cccc
+    \item {\it Data byte}: 0vvv vvvv
+  \end{itemize}
+\end{itemize}
+
+Onde nnnn representa o canal para o qual a mensagem será enviada, da mesma forma das mensagens de ativação e desativação do som, ccccccc representa o controlador que terá o seu valor alterado e vvvvvvv representa o valor que será atribuído para o controlador. Os controladores controlados a partir dessas mensagens podem variar entre 128 controladores destintos sendo eles os seguintes:
+
+FOTO DOS CONTROLADORES
+
+Com essa mensagem, é possível variar, em cada canal, desde variáveis de volume, até variáveis de modulação e efeitos que caracterização como o som será reproduzido pelo sintetizador.
 
 \chapter{Marcadores ArUco}
 \label{cha:fund-teor}
@@ -402,11 +416,14 @@ explicando um bê-a-bá do uso do modelo é bem vinda. :)))
 
 \chapter{Biblioteca RtMidi}
 
+Como já visto no capítulo (capítulo do protocolo midi), o sintetizador escolhido pelo usuário precisa receber as mensagens enviadas pelo software e foi com auxílio da biblioteca RtMidi para a linguagem de programação C++ que foi possível abstrair todo o fluxo de troca de mensagens em simples funções disponibilizadas pela biblioteca.
 
+Para a utilização do protocolo MIDI e para a comunicação entre sintetizadores, foi escolhida a biblioteca RtMidi para a linguagem de programação C++. Toda a transmissão e criação das mensagens foi abstraída durante o desenvolvimento do projeto graças às funcionalidades da biblioteca e foi por esse motivo, além de ser Open Source, que ela foi escolhida para fazer parte do desenvolvimento do software.
+
+A biblioteca consiste em duas classes chamadas RtMidiOut e RtMidiIn. A classe RtMidiOut proporciona, para o desenvolvedor, funcionalidades simples para a imediata troca de mensagens MIDI entre dispositivos virtuais ou não conectados através de uma conexão MIDI. Com essas funcionalidades foi possível ocorrer o envio de mensagens para o sintetizador selecionado pelo usuário como uma saída MIDI com apenas o uso, após configurada essa saída, de uma função responsável exclusivamente pelo envio dessas mensagens. A outra classe, a RtMidiIn, apesar de não ter sido utilizada no software apresentado neste trabalho, utiliza uma função interna de callback ou thread para receber mensagens MIDI que são enviadas a partir de uma entrada MIDI selecionável e as lendo, transformando no formato utilizado pela biblioteca, ou repassando-a imediatamente para uma função de callback especificada pelo usuário, o que tornaria possível, por exemplo, o software reproduzir, num sintetizador digital, o que foi enviado a partir de um controlador físico conectado à máquina do usuário.
+
+Para o testes do software, foram utilizados 3 softwares de terceiros, sendo eles o QSynth, sintetizador virtual MIDI, o VMPK, outro sintetizador virtual MIDI mas também controlador, e o QJackCtl, um software que permite o usuário administrar as conexões MIDI entre saídas e entradas MIDI disponíveis na máquina.
 TUDO ABAIXO SERÁ EXPLICADO NESTE ÚTIMO CAPÍTULO
-- Descrever o uso da classe RtMidi, porque foi escolhida e como se dá
-sua utilização.
-Para a utilização do protocolo MIDI e para a comunicação entre sintetizadores, foi escolhida a biblioteca RtMidi para a linguagem de programação C++. Toda a transmissão e criação das mensagens foi abstraída durante o desenvolvimento do projeto graças às funcionalidades da biblioteca.
 
 - Descrever o sintetizador usado nos experimentos (QSynth).
 
@@ -415,6 +432,7 @@ Controlador e o Sintetizador. Um diagrama legal feito no inkscape
 cairia bem nesse canto.
 O diagrama a seguir representa como o software controlador se comunica com um sintetizador
 DIAGRAMA (MIDI INPUT, OUPUT, SOFTWARE CONTROLADOR E SINTETIZADOR)
+BASICAMENTE SOFTWARE (CONTROLADOR) COMO INPUT LIGADO NO SINTETIZADOR (VMPK OU QSYNTH) COMO OUTPUT E A TROCA DE MENSAGENS OCORRE DO CONTROLADOR PARA O SINTETIZADOR.
 
 \chapter{Resultados}
 \label{cha:resultados}
